--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/bingo-app-react/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="./src/output.css" rel="stylesheet">
+  <link href="/src/output.css" rel="stylesheet">
   <title>Zoomie Bingo</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
